Name:           test-sandbox-expect
Version:        0.0.1
Cabal-Version:  >= 1.14
Category:       Testing
Synopsis:       A simple implementation of PERL's "Expect" functionality in the Test.Sandbox monad.
License:        BSD3
License-File:   LICENSE
Author:         Benjamin Surma <benjamin.surma@gree.net>
Maintainer:     Benjamin Surma <benjamin.surma@gree.net>
Build-Type:     Simple

Library
    Exposed-Modules:     Test.Sandbox.Expect

    Build-Depends:       base == 4.6.*, mtl, test-sandbox == 0.0.1.*, test-sandbox-hunit == 0.0.1.*

    Hs-Source-Dirs:      src

    Default-Language:    Haskell2010
